syntax = "proto3";

// The realtime protocol for the template match engine.
package api;

option go_package = "github.com/ciaolink-game-platform/cgp-lobby-module/api";

message ChangePasswordRequest {
  string old_password = 1;
  string password = 2;
}

message RegisterRequest {
  string user_name = 1;
  string password = 2;
}